# TeleAssist

./: .gitignore
backend/: Dockerfile  README.md  api.py  diagnose.py  ingest_faq.py  ingest_pdf.py  ingest_tickets.py  main.py  pyproject.toml  rag_chain.py  requirements.txt  retriever.py
backend/chroma_store/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
